# spiking-network-info-transmission

./: README.md  main.py  pyproject.toml  research_question.txt  search_for.txt
configs/: adaptive_lif_recurrent_learn.json  adaptive_lif_sparse.json  baseline_izhikevich.json  baseline_lif.json  izhikevich_base.json  izhikevich_deep.json  lif_feedforward_learn.json
notebooks/: demo_model.ipynb  network_display.ipynb  testnetwork.ipynb
results/strongly_clustered/: metrics_weight0.2_connectionBaseline_inputstrongly_clustered.json  metrics_weight0.2_connectionClustered_inputstrongly_clustered.json  metrics_weight0.2_connectionRandom_inputstrongly_clustered.json  metrics_weight0.5_connectionClustered_inputstrongly_clustered.json  metrics_weight0.5_connectionRandom_inputstrongly_clustered.json  metrics_weight1.0_connectionBaseline_inputstrongly_clustered.json  metrics_weight1.0_connectionClustered_inputstrongly_clustered.json  metrics_weight1.0_connectionRandom_inputstrongly_clustered.json
results/strongly_distributed/: metrics_weight0.2_connectionClustered_inputstrongly_distributed.json  metrics_weight0.5_connectionClustered_inputstrongly_distributed.json  metrics_weight0.5_connectionRandom_inputstrongly_distributed.json  metrics_weight1.0_connectionBaseline_inputstrongly_distributed.json  metrics_weight1.0_connectionClustered_inputstrongly_distributed.json  metrics_weight1.0_connectionRandom_inputstrongly_distributed.json
src/: connections.py  demo_model.ipynb  functions.py  gridsearch.py  inputs.py  networks.py  testnetwork.ipynb  utils.py  visualize_layers.ipynb
(+36 files in other folders)
